# auto-codabench

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: autocodabench-orchestrator
.github/workflows/: ci.yml
auto_codabench/: .env.example  INSTRUCTION_FOR_USER.md  README.md  __init__.py
auto_codabench/runs/: log_hook.py
benchmark/: LEADERBOARD.json  LEADERBOARD.md  README.md
docker/: README.md  autocodabench-base-requirements.txt  autocodabench-cpu.Dockerfile  autocodabench-gpu.Dockerfile  build_and_push.sh
docs/: INSTRUCTION_FOR_USER.md  architecture.md  autocodabench_checks.md  codabench-upload-api.md  codabench-validate-walkthrough.md  demo-for-reviewers.md  design-rationale.md  post-create-pipeline.md  scientific-validation.md  validate-bundle-walkthrough.md  validation-checklist-proposal-addendum.md  validation-checklist-proposal.md  validation-provenance-and-positioning.md  verification-catalog.md
scripts/: competition_bundle_validator.py  make_demo_fixture.py
tests/: test_auth.py  test_bench.py  test_bench_cli.py  test_checks.py  test_cli.py  test_core_bundle_io.py  test_defects.py  test_docker_engine.py  test_emulation_guard.py  test_execution_checks.py  test_leaderboard.py  test_preflight.py  test_proposal.py  test_research.py  test_run_layout.py  test_sandbox.py
web/: README.md  README_NEW.md  app.py  artifacts.py  chainlit.md  config.py  hf_persist.py  phase_manager.py  requirements.txt  session_manager.py  skills.py  streaming.py  upload_route.py
(+133 files in other folders)
